Fixed line spacing in default PUG file.

--- a/app/sass/components/_theme.scss
+++ b/app/sass/components/_theme.scss
@@ -8,13 +8,3 @@ button {
 body {
   padding-top: 3.5rem;
 }
-
-.columns {
-  @include make-col-ready();
-  @include media-breakpoint-down(md) {
-    @include make-col(12);
-  }
-  @include media-breakpoint-up(md) {
-    @include make-col(4);
-  }
-}
